--- a/page/home/pages/serviceProvider/toBeDispatch/toBeDispatch.wxml
+++ b/page/home/pages/serviceProvider/toBeDispatch/toBeDispatch.wxml
@@ -12,7 +12,7 @@
           <view class="mp-cell-view">故障位置:{{order.mdmcTask.addressName}}</view>
           <view class="mp-cell-view">报修时间:{{order.mdmcTask.appointTime}}</view>
           <view wx:if="{{order.mdmcTask.status!=14}}" class="operation_view">
-            <view class="operation_button" catchtap="receiveOrder" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}" data-projectid="{{order.mdmcTask.projectId}}">派单</view>
+            <!-- <view class="operation_button" catchtap="receiveOrder" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}" data-projectid="{{order.mdmcTask.projectId}}">派单</view> -->
             <!-- <view class="operation_button" catchtap="rejectOrder" data-id="{{order.id}}" data-status="{{order.status}}">拒绝</view> -->
           </view>
         </mp-cell>
