--- a/page/common/modal/modal-tpl.wxml
+++ b/page/common/modal/modal-tpl.wxml
@@ -40,11 +40,66 @@
   <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showEdit}}"></view>
   <view class="modal-dialog" wx:if="{{showEdit}}">
     <view class="modal-title">{{content.title}}</view>
-    <view class="modal-content">
-      <view class="modal-input">
-        <input placeholder-class="input-holder" type="text" maxlength="20" focus="true" bindinput="inputChange" class="input" placeholder="{{content.placeholder}}"></input>
+    <view class="drawer_content"> 
+      <view class="top grid"> 
+        <label class="title col-0">故障原因：</label> 
+        <input class="input_base input_h30 col-1" name="networkName" type="text" maxlength="20" focus="true" bindinput="inputChange1" placeholder="{{content.errorReason}}"></input> 
+      </view> 
+      <view class="top grid"> 
+        <label class="title col-0">维修结果：</label> 
+        <input class="input_base input_h30 col-1" name="networkDevice" type="text" maxlength="20" bindinput="inputChange2" placeholder="{{content.errorResult}}"></input> 
       </view>
-    </view>
+      <view class="top grid"> 
+        <label class="title col-0">现场图片：</label> 
+        <view class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindtap="clickUploadImg">点击上传</view> 
+      </view> 
+      <view class="top grid"> 
+        <label class="title col-0">维修建议：</label> 
+        <input class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindinput="inputChange3" placeholder="{{content.errorSuggest}}"></input> 
+      </view>
+      <view class="top grid"> 
+        <label class="title col-0">超时原因：</label> 
+        <input class="input_base input_h30 col-1" name="networkDevice" type="text" maxlength="20" bindinput="inputChange4" placeholder="{{content.delayReason}}"></input> 
+      </view>
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">开始时间：</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.startDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindStartDateChange">
+                <view class="weui-input">{{content.startDate}}</view>
+              </picker>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.startTime}}" bindchange="bindStartTimeChange">
+                <view class="weui-input">{{content.startTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view>
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">结束时间：</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.endDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindEndDateChange">
+                <view class="weui-input">{{content.endDate}}</view>
+              </picker>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.endTime}}" bindchange="bindEndTimeChange">
+                <view class="weui-input">{{content.endTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view> 
+ </view> 
     <view class="modal-footer">
       <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
       <view class="btn-confirm" bindtap="confirmInput" data-status="confirm">确定</view>
@@ -77,7 +132,7 @@
       <view class="top grid"> 
         <label class="title col-0">上传图片</label> 
         <view class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindtap="clickUploadImg">点击上传</view> 
-      </view> 
+      </view>
  </view> 
     <!-- <view class="modal-content">
       <view class="modal-input">
@@ -145,6 +200,130 @@
         <label class="title col-0">上传图片</label> 
         <view class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindtap="clickUploadImg">点击上传</view> 
       </view> 
+ </view> 
+    <view class="modal-footer">
+      <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
+      <view class="btn-confirm" bindtap="confirmInput" data-status="confirm">确定</view>
+    </view>
+  </view>
+</template>
+
+<!--维修分配工程师弹窗-->
+<template name="distributeEngineer">
+  <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showEdit}}"></view>
+  <view class="modal-dialog" wx:if="{{showEdit}}">
+    <view class="modal-title">{{content.title}}</view>
+    <view class="drawer_content">
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input" bindtap="receiveAndDispatchOrder">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleEngineer}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <view class="weui-input">{{content.engineerName}}</view>
+            </view>
+          </view>
+        </view>
+      </view>  
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleStartDate}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.endDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindStartDateChange">
+                <view class="weui-input">{{content.endDate}}</view>
+              </picker>
+            </view>
+          </view>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleStartTime}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.endTime}}" bindchange="bindStartTimeChange">
+                <view class="weui-input">{{content.endTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view> 
+ </view> 
+    <view class="modal-footer">
+      <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
+      <view class="btn-confirm" bindtap="confirmInput" data-status="confirm">确定</view>
+    </view>
+  </view>
+</template>
+
+<!--工程师接单弹窗-->
+<template name="engineerReceiveOrder">
+  <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showEdit}}"></view>
+  <view class="modal-dialog" wx:if="{{showEdit}}">
+    <view class="modal-title">{{content.title}}</view>
+    <view class="drawer_content">
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input" bindtap="receiveAndDispatchOrder">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleEngineer}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <view class="weui-input">{{content.engineerName}}</view>
+            </view>
+          </view>
+        </view>
+      </view>  
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleStartDate}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.startDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindStartDateChange">
+                <view class="weui-input">{{content.startDate}}</view>
+              </picker>
+            </view>
+          </view>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleStartTime}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.startTime}}" bindchange="bindStartTimeChange">
+                <view class="weui-input">{{content.startTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view> 
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleEndDate}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.endDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindEndDateChange">
+                <view class="weui-input">{{content.endDate}}</view>
+              </picker>
+            </view>
+          </view>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleEndTime}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.endTime}}" bindchange="bindEndTimeChange">
+                <view class="weui-input">{{content.endTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view>
  </view> 
     <view class="modal-footer">
       <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
