--- a/page/home/pages/serviceProvider/toBeDistributeDetail/toBeDistributeDetail.wxml
+++ b/page/home/pages/serviceProvider/toBeDistributeDetail/toBeDistributeDetail.wxml
@@ -82,7 +82,7 @@
 <view class="page-section">
   <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
-      <button type="default" plain="true" bindtap="receiveOrder">接单</button>
+      <button type="default" plain="true" bindtap="distributeEngineer">分配工程师</button>
     </view>
   </view>
 </view>
@@ -104,4 +104,6 @@
 </template>
 
 <template is="showSpareParts" data="{{showSpareParts,deviceOrderCount,allDeviceOrderList}}">
+</template>
+<template is="distributeEngineer" data="{{showEdit,content}}">
 </template>
