--- a/page/home/pages/terminalUser/toBeConfirm/toBeConfirm.wxml
+++ b/page/home/pages/terminalUser/toBeConfirm/toBeConfirm.wxml
@@ -8,8 +8,8 @@
             <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
           </view>
           <view>项目:{{order.pmcProjectDto.contractName}}</view>
-          <view>{{order.mdmcTask.deviceName}}</view>
-          <view class="mp-cell-view">故障位置:{{order.mdmcTask.addressName}}</view>
+          <!-- <view>{{order.mdmcTask.title}}</view> -->
+          <view class="mp-cell-view">任务名称:{{order.mdmcTask.title}}</view>
           <view class="mp-cell-view">报修时间:{{order.mdmcTask.appointTime}}</view>
         </mp-cell>
       </mp-cells>
