--- a/page/common/modal/modal-tpl.wxml
+++ b/page/common/modal/modal-tpl.wxml
@@ -65,12 +65,17 @@
         <view class="weui-cells weui-cells_after-title">
           <view class="weui-cell weui-cell_input">
             <view class="weui-cell__hd">
-              <view class="weui-label">开始时间：</view>
+              <view class="weui-label">开始日期：</view>
             </view>
             <view class="weui-cell__bd">
               <picker mode="date" value="{{content.startDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindStartDateChange">
                 <view class="weui-input">{{content.startDate}}</view>
               </picker>
+            </view>
+          </view>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">开始时间：</view>
             </view>
             <view class="weui-cell__bd">
               <picker mode="time" value="{{content.startTime}}" bindchange="bindStartTimeChange">
@@ -84,12 +89,17 @@
         <view class="weui-cells weui-cells_after-title">
           <view class="weui-cell weui-cell_input">
             <view class="weui-cell__hd">
-              <view class="weui-label">结束时间：</view>
+              <view class="weui-label">结束日期·：</view>
             </view>
             <view class="weui-cell__bd">
               <picker mode="date" value="{{content.endDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindEndDateChange">
                 <view class="weui-input">{{content.endDate}}</view>
               </picker>
+            </view>
+          </view>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">结束时间：</view>
             </view>
             <view class="weui-cell__bd">
               <picker mode="time" value="{{content.endTime}}" bindchange="bindEndTimeChange">
