--- a/page/home/pages/serviceEngineer/inspectionConfirm/inspectionConfirm.wxml
+++ b/page/home/pages/serviceEngineer/inspectionConfirm/inspectionConfirm.wxml
@@ -8,8 +8,8 @@
                 </view>
                 <view>{{order.itemName}}</view>
                 <view>{{order.description}}</view>
-                <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
-                <view style="font-size: 13px;color: #888888;">报修时间:{{order.scheduledStartTime}}</view>
+                <view style="font-size: 13px;color: #888888;">点位数量：{{order.count}} （个）</view>
+                <view style="font-size: 13px;color: #888888;">报修时间：{{order.scheduledStartTime}}</view>
                 <view class="operation_view">
                   <view class="operation_button" data-id="{{order.id}}" data-idx="{{index}}" catchtap="clickAccept">接单</view>
                   <!-- <view class="operation_button" data-id="{{order.id}}" data-idx="{{index}}" catchtap="clickNotAccept">驳回</view> -->
