--- a/page/home/pages/terminalUser/completed/completed.wxml
+++ b/page/home/pages/terminalUser/completed/completed.wxml
@@ -8,14 +8,9 @@
             <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
           </view>
           <view>项目:{{order.pmcProjectDto.contractName}}</view>
+          <!-- <view>{{order.mdmcTask.title}}</view> -->
           <view class="mp-cell-view">任务名称:{{order.mdmcTask.title}}</view>
           <view class="mp-cell-view">报修时间:{{order.mdmcTask.appointTime}}</view>
-
-          <view class="operation_view">
-            <view class="operation_button" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}">小程序不支持备件</view> 
-            <!-- <view class="operation_button" catchtap="pass" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}">备件方案通过</view>
-            <view class="operation_button" catchtap="reject" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}">备件方案驳回</view> -->
-          </view>
         </mp-cell>
       </mp-cells>
     </scroll-view>
