--- a/page/home/pages/all-work-orders-Detail/all-work-orders-Detail.wxss
+++ b/page/home/pages/all-work-orders-Detail/all-work-orders-Detail.wxss
@@ -1,9 +1,10 @@
 @import '../../../common/lib/common.wxss';
-.top-tab{
+
+.top-tab {
   width: 750rpx;
   height: 100rpx;
-  background: #2D4E95;
-  color: #8CCEFD;
+  background: #2d4e95;
+  color: #8ccefd;
   font-size: 28rpx;
   line-height: 100rpx;
   box-shadow: 0 2px 2px #bebebe;
@@ -11,19 +12,53 @@
   z-index: 9999;
 }
 
-.toptab.active{
-  color: #ffffff;
-  border-bottom: solid 2px #ffffff;
+.toptab.active {
+  color: #fff;
+  border-bottom: solid 2px #fff;
 }
-.activity{
+
+.activity {
   width: 750rpx;
   height: 375rpx;
 }
-.activity image{
+
+.activity image {
   width: 750rpx;
   height: 375rpx;
 }
-.placehold{
+
+.placehold {
   font-size: 28rpx;
   padding: 80rpx 0;
 }
+
+/* .category-detail-box {
+  overflow: hidden;
+  padding: 10rpx 10rpx 0rpx;
+  display: flex;
+  justify-content: center;
+  background-color: #fffef9;
+}
+
+.category-main {
+  height: 91%;
+}
+
+.category-goods-items {
+  margin: 5rpx;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border:2rpx solid #bebebe
+}
+
+.group-image {
+  height: 100rpx;
+  width: 100rpx;
+}
+
+.fujian{
+  padding: 16px;
+} */
