--- a/page/home/pages/serviceProvider/networkDistribute/networkDistribute.wxml
+++ b/page/home/pages/serviceProvider/networkDistribute/networkDistribute.wxml
@@ -11,7 +11,25 @@
     <view class="page__bd">
         <mp-cells ext-class="my-cells">
             <mp-cell value="归属项目" footer="{{projectDetail.projectName}}"></mp-cell>
+            <mp-cell wx:if="{{projectDetail.isDestroy==0}}" value="项目是否作废" footer="有效">有效</mp-cell>
+            <mp-cell wx:else value="项目是否作废" footer="作废">作废</mp-cell>
+            <mp-cell value="项目类型" footer="{{projectDetail.projectType}}">{{projectDetail.projectType}}</mp-cell>
+            <mp-cell value="项目开始时间" footer="{{projectDetail.startTime}}">{{projectDetail.startTime}}</mp-cell>
+            <mp-cell value="项目结束时间" footer="{{projectDetail.endTime}}">{{projectDetail.endTime}}</mp-cell>
+            <mp-cell wx:if="{{projectDetail.isContract==1}}" value="是否签署合同" footer="是">是</mp-cell>
+            <mp-cell wx:else value="是否签署合同" footer="否">否</mp-cell>
+            <mp-cell value="服务商24小时移动电话" footer="{{projectDetail.partyBPhone}}">{{projectDetail.partyBPhone}}</mp-cell>
+            <mp-cell value="服务商24小时值班电话" footer="{{projectDetail.partyBTel}}">{{projectDetail.partyBTel}}</mp-cell>
+            <mp-cell value="服务商24小时联系邮箱" footer="{{projectDetail.partyBEmail}}">{{projectDetail.partyBEmail}}</mp-cell>
+            <mp-cell value="项目相关描述" footer="{{projectDetail.description}}">{{projectDetail.description}}</mp-cell>
+            <mp-cell value="用户相关联系人1" footer="{{projectDetail.aoneName}}">{{projectDetail.aoneName}}</mp-cell>
+            <mp-cell value="联系电话" footer="{{projectDetail.partyAOne}}" bindtap="makePhone" data-phone="{{projectDetail.partyAOne}}">{{projectDetail.partyAOne}}</mp-cell>
+            <mp-cell value="用户相关联系人2" footer="{{projectDetail.atwoName}}">{{projectDetail.atwoName}}</mp-cell>
+            <mp-cell value="联系电话" footer="{{projectDetail.partyATwo}}" bindtap="makePhone" data-phone="{{projectDetail.partyATwo}}">{{projectDetail.partyATwo}}</mp-cell>
+            <mp-cell value="用户相关联系人3" footer="{{projectDetail.athreeName}}">{{projectDetail.athreeName}}</mp-cell>
+            <mp-cell value="联系电话" footer="{{projectDetail.partyAThree}}" bindtap="makePhone" data-phone="{{projectDetail.partyAThree}}">{{projectDetail.partyAThree}}</mp-cell>
             <mp-cell value="巡检名称" footer="{{inspectionDetail.taskName}}"></mp-cell>
+            <mp-cell value="用户公司名称" footer="{{projectDetail.aoneName}}">{{projectDetail.aoneName}}</mp-cell>
             <mp-cell value="巡检周期" footer="{{inspectionDetail.frequency}}天"></mp-cell>
             <mp-cell value="开始时间" footer="{{inspectionDetail.scheduledStartTime}}"></mp-cell>
             <mp-cell value="计划完成时间" footer="{{inspectionDetail.days}}天"></mp-cell>
@@ -26,6 +44,9 @@
             <mp-cell value="甲方负责人" footer="{{principalDetail.userName}}"></mp-cell>
             <mp-cell value="联系电话" footer="{{principalDetail.mobileNo}}" data-phone="{{principalDetail.mobileNo}}" bindtap="clickPhoneCall"></mp-cell>
             <mp-cell value="服务商" footer="{{companyDetail.groupName}}"></mp-cell>
+            <mp-cell value="验收服务内容" footer="{{inspectionReview.checkContens}}"></mp-cell>
+            <mp-cell value="服务打星" footer="{{inspectionReview.score}}星"></mp-cell>
+            <mp-cell value="服务评价" footer="{{inspectionReview.contents}}"></mp-cell>
         </mp-cells>
     </view>
     <!-- <view class="page__bd">
