--- a/page/home/index.wxml
+++ b/page/home/index.wxml
@@ -8,7 +8,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">故障报修</view>
-          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部工单</navigator>
+          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部维修</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
 
@@ -30,7 +30,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">故障报修</view>
-          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部工单</navigator>
+          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部维修</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
         <view class="page-body-line"></view>
@@ -47,7 +47,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">我的巡检</view>
-          <navigator class="list-text" url="pages/all-work-inspection/all-work-inspection">查看全部任务</navigator>
+          <navigator class="list-text" url="pages/all-work-inspection/all-work-inspection">查看全部巡检</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
         <view class="page-body-line"></view>
@@ -67,7 +67,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">故障报修</view>
-          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部工单</navigator>
+          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部维修</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
 
@@ -87,7 +87,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">我的巡检</view>
-          <navigator class="list-text" url="pages/all-work-inspection/all-work-inspection">查看全部任务</navigator>
+          <navigator class="list-text" url="pages/all-work-inspection/all-work-inspection">查看全部巡检</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
         <view class="page-body-line"></view>
@@ -106,7 +106,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">故障报修</view>
-          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部工单</navigator>
+          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部维修</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
 
@@ -125,7 +125,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">我的巡检</view>
-          <navigator class="list-text" url="pages/inspectionItems/inspectionItems">查看全部任务</navigator>
+          <navigator class="list-text" url="pages/inspectionItems/inspectionItems">查看全部巡检子项</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
 
