--- a/page/home/pages/serviceProvider/toBeDispatch/toBeDispatch.wxml
+++ b/page/home/pages/serviceProvider/toBeDispatch/toBeDispatch.wxml
@@ -1,7 +1,7 @@
 <view class="page">
   <view class="page__bd">
     <!-- bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" -->
-    <scroll-view scroll-y="true" class="container discovery">
+    <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower">
       <mp-cells>
         <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.mdmcTask.id}}" data-projectid="{{order.mdmcTask.projectId}}" bindtap="clickOrder">
           <view slot="title" class="mp-cell-title">
