--- a/page/home/pages/terminalUserManager/toBePay/toBePay.wxss
+++ b/page/home/pages/terminalUserManager/toBePay/toBePay.wxss
@@ -1,8 +1,8 @@
 @import '../../../../common/lib/common.wxss';
 @import "../../../../common/modal/modal-tpl.wxss";
 .container {
+  height:1500rpx
 }
-
 .blue {
   background: blue;
 }
